<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyKomik</string>
    <string name="no_permission">Please, allow this application to browse your folders.</string>
    <string name="choose_root_text">Choose your comics folder</string>
    <string name="empty_cache">Empty cache</string>
    <string name="change_root_directory">Change comic folder</string>
    <string name="choose_root_directory_the_first_time">Please select the folder containing all your comics</string>
    <string name="ask_change_root_directory">Do you really want to change the main comic folder?</string>
    <string name="ask_clear_cache">Do you really want to clear the cache?</string>
    <string name="ask_delete_this_file">Do you really want to delete this file?</string>
    <string name="ask_delete_files">Do you really want to delete the following %1$d files?</string>
    <string name="no_file_selected">No file selected !</string>
    <string name="ask_continue_with_same_comic">Continue from your last comic?</string>
    <string name="dialog_choose_root_select">Select</string>
    <string name="action_delete_files">Delete file(s)</string>
    <string name="action_select_all">Select all</string>
    <string name="action_select_none">Select none</string>
    <string name="page_number_info">Page %1$d of %2$d</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="comic_info">Information</string>
    <string name="actionbar_text_item_selected">%1$d Item selected</string>
    <string name="actionbar_text_items_selected">%1$d Items selected</string>
    <string name="actionbar_button_done">Cancel</string>
    <string name="message_files_deleted">File(s) deleted</string>
    <string name="message_undo">Undo</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="ask_read_previous_issue">Begin reading previous issue?</string>
    <string name="ask_read_next_issue">Begin reading next issue?</string>
    <string name="back_to_browser">Back to browser</string>
    <string name="no_next_issue">There is no more issues.</string>
    <string name="no_previous_issue">There is no previous issues.</string>
    <string name="descriptionComicPages">Comic pages</string>
    <string name="descriptionBrowser">Comics list</string>
    <string name="browser_comic_image">Comic image</string>
    <string name="browser_comic_title">Comic title</string>
    <string name="browser_reading_completed_or_not">Reading completed or not?</string>
    <string name="go_first_page">Go first page</string>
    <string name="go_last_page">Go last page</string>
    <string name="previous_comic">Previous Comic</string>
    <string name="next_comic">Next Comic</string>
    <string name="popup_info_title">File information</string>
    <string name="popup_info_name">Name</string>
    <string name="popup_info_size">Size</string>
    <string name="popup_info_date">Date</string>
    <string name="popup_info_path">Path</string>
    <string name="unit_megabyte">MB</string>

    <string name="settings_library">Library Settings</string>
    <string name="settings_reader">Reader Settings</string>
    <string name="settings_tap_to_change_page">Tap to change/scroll page</string>
    <string name="settings_tap_to_change_page_summary">Tap edge of screen to change/scroll page</string>
    <string name="settings_hide_read_comics">Hide "read" comics</string>
    <string name="settings_hide_read_comics_summary">Hides comics marked as "read" in the file browser</string>
    <string name="settings_page_turn_direction">Page turn direction</string>
    <string name="settings_page_turn_direction_summary">The direction to swipe to change the page</string>
    <string name="settings_disable_rotation">Disable landscape mode</string>
    <string name="settings_disable_rotation_summary">Enabling this preference will prevent the device from rotating into landscape mode</string>
    <string name="settings_thumbnail_generation">Thumbnails generation in background</string>
    <string name="settings_thumbnail_generation_summary">Generate all the thumbnails in background, even in other directories</string>
    <string name="settings_hide_page_number">Hide page number display</string>
    <string name="settings_adapt_page_background_auto">Adapt the page background automatically</string>


    <string name="by_author">by Frédéric Nourry</string>
    <string name="menu_group_general">General</string>
    <string name="menu_group_guest">Guest mode</string>
    <string name="menu_guest_mode">Guest mode</string>
    <string name="guest_mode_short_description">Progress not shown or saved</string>
    <string name="guest_mode_long_description">Progress in comics will not be saved, and files can not be deleted or marked as read</string>
    <string name="save_page">Save page</string>
    <string name="save_page_message">Save this page ?</string>
    <string name="save_page_message_unknown_error">An error occurred while saving this page</string>
    <string name="save_page_message_ok">Page saved in %s</string>
    <string name="save_page_message_error_io">An I/O error occurred while saving this page in %s (%s)</string>
    <string name="loading_image">Loading image</string>

    <string name="opening_error">Error :\n%1$s</string>

    <string name="button_show_full_image">Show Full Image</string>
    <string name="button_maximize_in_width">Maximize in width</string>
    <string name="button_maximize_in_height">Maximize in height</string>


    <string name="about_description">©2023 All rights reserved\n\nDeveloped by Frederic Nourry</string>
    <string name="about_release_notes">\n\nRelease notes:
    \n - Auto-saves the display option
    \n - When press Back, scrolls the browser and highlights the last comic
    \n - [Option] Tap the border page to scroll left or right if zoomed
    \n - Corrects some stability problems
    \n1.0.4:
    \n - Corrects bug while saving the reading progress
    \n - Corrects some translation errors in French</string>

    <string-array name="settings_page_turn_direction_labels">
        <item>Left to right</item>
        <item>Right to left</item>
    </string-array>

</resources>