<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="5dp"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:paddingStart="2dp"
    android:paddingTop="5dp"
    android:paddingEnd="0dp"
    android:paddingBottom="0dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/semi_transparent"
        app:cardElevation="0dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:clickable="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/checkBox"
                android:contentDescription="@string/browser_comic_image"
                android:scaleType="fitCenter" />

            <ImageView
                android:id="@+id/imageIconView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_alignBottom="@+id/imageView"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="65dp"
                android:gravity="center_horizontal"
                app:tint="@color/darken_tint_icon"
                app:srcCompat="@drawable/ic_baseline_book_open_24"
                android:contentDescription="@string/browser_reading_completed_or_not" />

            <TextView
                android:id="@+id/percentView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:visibility="gone"
                android:layout_alignBottom="@+id/imageView"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="40dp"
                android:gravity="center_horizontal"
                android:text="100%"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="top|center"
                android:padding="0dp"
                android:text="@string/browser_comic_title"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
